# ATS

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  RELEASE_AUDIT_V1.md  VALIDATION_REPORT.md  acceptance_results.json  docker-compose.yml  e2e_auth.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: secrets.toml.example
backend/: Dockerfile  OBSERVABILITY.md  main.py
backend/api/: auth.py  routes.py
backend/auth/: mock_auth.py  real_auth.py
backend/core/: config.py
backend/database/: base.py  memory_store.py  sqlite_store.py  store.py  supabase_db.py  supabase_store.py
backend/models/: schemas.py
backend/services/: ats_scorer.py  feedback_engine.py  groq_parser.py  jd_matcher.py  pdf_export.py  recommendation_engine.py  report_generator.py  resume_analyzer.py  resume_parser.py
backend/utils/: file_utils.py  matching.py
frontend/: Dockerfile  streamlit_app.py
frontend/components/: _helpers.py  action_items.py  detailed_feedback.py  score_display.py  skill_validation.py
load/: locustfile.py
scripts/: README.md  _write_large_pdf.py  ats_batch_run.py  ats_logic_test.py  check_history.py  check_table_exists.py  delete_first_history.py  load_test_simple.py  ocr_test.py  pdf_validation.py  resume_matrix_test.py  test_groq.py  verify_integration.py  verify_offline_browser.py
tests/: conftest.py  generate_fixtures.py  test_config.py  test_e2e.py  test_fixtures.py  test_health.py  test_parser.py  test_pdf.py  test_pipeline.py  test_supabase_auth_config.py
(+14 files in other folders)
