[project]
name = "ats-resume-analyzer"
version = "1.0.0"
description = "A production-ready resume analysis application"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "spacy>=3.7,<4.0",
  "sentence-transformers>=2.5",
  "numpy>=1.26",
  "rapidfuzz>=3.6",
  "pdfplumber>=0.11",
  "pypdf>=6.0",
  "pdf2image>=1.17",
  "python-docx>=1.1",
  "python-magic>=0.4.27",
  "pytesseract>=0.3.13",
  "jinja2>=3.1",
  "weasyprint>=60.0",
  "httpx>=0.27",
  "groq>=0.13",
  "PyJWT[crypto]>=2.8",
  "streamlit>=1.32",
  "requests>=2.31",
  "supabase>=2.4",
  "reportlab>=4.0",
  "Pillow>=10.0",
  "prometheus-client>=0.16.0"
]

[tool.black]
line-length = 100
target-version = ["py313"]
extend-exclude = '''
(
  ^/jupyter\ notebooks/
)
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
  "jupyter notebooks",
]

[tool.vercel]
entrypoint = "backend.main:app"
